--- a/Index.html
+++ b/Index.html
@@ -15,9 +15,9 @@
         <h1>Welkom op mijn site</h1>
     </header>
     <nav>
-        <button id="pagina1Button">Algemene informatie</button>
+        <button id="pagina1Button">Homepage</button>
         <button id="pagina2Button">Binairstelsel </button>
-        <button id="pagina3Button">Pagina 3</button>
+        <button id="pagina3Button">kleurenmodellen</button>
         <button id="pagina4Button">Pagina 4</button>
         <button id="pagina5Button">Pagina 5</button>
         <button id="pagina6Button">Pagina 6</button>
@@ -37,7 +37,7 @@
         const content = document.getElementById("content");
 
         pagina1Button.addEventListener("click", function () {
-            content.textContent = "Wat is het binair stelsel?";
+            content.textContent = "Ik heet gijs van der hoorn en ik ben vijftien jaar en zit op het vlietlandcollege";
         });
 
         pagina2Button.addEventListener("click", function () {
@@ -45,7 +45,7 @@
         });
 
         pagina3Button.addEventListener("click", function () {
-            content.textContent = "Dit is Pagina 3.";
+            content.textContent = "Kleuren Modellen zijn systemen die worden gebruikt om kleuren te laten zien in digitale en grafische toepassingen. Ze vormen een belangrijk onderdeel: beeldbewerking, grafisch ontwerp en digitale weergave. Voorbeelden van kleuren modellen zijn RGB, waarin kleuren worden gemaakt door verschillende kleuren van deze drie primaire kleuren te mengen, en CMYK, dat wordt gebruikt voor kleurenafdrukken. Andere modellen zoals HSB en Lab, bieden verschillende manieren om kleuren te laten zien. De keuze van het kleurenmodel hangt af van de toepassingen en het doel, zoals schermweergave, afdrukken of kleurcorrectie.";
         });
 
         pagina4Button.addEventListener("click", function () {
@@ -61,3 +61,4 @@
     </script>
 </body>
 </html>
+
