--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
         <button id="pagina2Button">Binairstelsel </button>
         <button id="pagina3Button">kleurenmodellen</button>
         <button id="pagina4Button">Compressietechnieken</button>
-        <button id="pagina5Button">Pagina 5</button>
+        <button id="pagina5Button">Werking van computer</button>
         <button id="pagina6Button">Pagina 6</button>
     </nav>
     <main id="content">
@@ -53,7 +53,7 @@
         });
 
         pagina5Button.addEventListener("click", function () {
-            content.textContent = "Dit is Pagina 5.";
+            content.textContent = "Een computer is een bijzonder en moeilijke machin die informatie verwerkt. Het brein van de computer is de CPU(Central processing Unit). Die voert berekeningen uit door instructies te lezen en gegevens op te halen uit het geheugen. Gegevens worden opgeslagen in opslagapparaten, zoals harde schijven of SSD's. In het besturingssysteem zit een hardware en software, waardoor gebruikers toegang krijgen tot programma's en gegevens. Input apparaten, zoals toetsenborden en muizen, laten mensen informatie invoeren, terwijl output apparaten zoals de monitor en printers resullaten weergeven. Communicatie met andere computers gebeurt via netwerken, terwijl softwareprogramma's verschillende taken uitvoeren, van tekstverwerking tot videogames. Dit alles maakt computers een heel handig hulpmiddel voor talloze toepassingen.";
         });
           pagina6Button.addEventListener("click", function () {
             content.textContent = "Dit is Pagina 6.";
