--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
         <button id="pagina3Button">kleurenmodellen</button>
         <button id="pagina4Button">Compressietechnieken</button>
         <button id="pagina5Button">Werking van computer</button>
-        <button id="pagina6Button">Pagina 6</button>
+        <button id="pagina6Button">Visuele en multimedia-inhoud</button>
     </nav>
     <main id="content">
         Dit is de homepage van mijn website.
@@ -56,7 +56,7 @@
             content.textContent = "Een computer is een bijzonder en moeilijke machin die informatie verwerkt. Het brein van de computer is de CPU(Central processing Unit). Die voert berekeningen uit door instructies te lezen en gegevens op te halen uit het geheugen. Gegevens worden opgeslagen in opslagapparaten, zoals harde schijven of SSD's. In het besturingssysteem zit een hardware en software, waardoor gebruikers toegang krijgen tot programma's en gegevens. Input apparaten, zoals toetsenborden en muizen, laten mensen informatie invoeren, terwijl output apparaten zoals de monitor en printers resullaten weergeven. Communicatie met andere computers gebeurt via netwerken, terwijl softwareprogramma's verschillende taken uitvoeren, van tekstverwerking tot videogames. Dit alles maakt computers een heel handig hulpmiddel voor talloze toepassingen.";
         });
           pagina6Button.addEventListener("click", function () {
-            content.textContent = "Dit is Pagina 6.";
+            content.textContent = "Visuele en multimedia-inhoud zijn verschillende vormen van media die visuele elementen, zoals foto's, video's, animaties en geluid combineren om informatie over te brengen. Deze content wordt gebruikt voor verschillende dingen zoals online marketing, entertainment, onderwijs en communicatie. Het doel is vaa om informatie anntrekkelijker en begrijpelijker te maken door het niet te schrijven maar het te laten zien. Visuele en multimedia-inhoud wordt vaak gebruikt op websites, sociale media, in reclamecampagnes, informatie video's, videogames en veel meer. Het vergroot de betrokkenheid van het publiek en verbetert de overdracht van de boodschappen door een combinatie van tekst, beeld en geluid.";
               });
     </script>
 </body>
