--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,8 @@
         <button id="pagina6Button">Visuele en multimedia-inhoud</button>
     </nav>
     <main id="content">
-        Dit is de homepage van mijn website.
+        Dit is de homepage van mijn website.<img src="download (1).png" alt="Binair stelsel">
+
     </main>
 
     <script>
