--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
               });
     </script>
     <footer>
-        <p>&copy; Gijs van der hoorn</p>
+        <p>&copy; Gijs van der hoorn, 2023</p>
     </footer>
 </body>
 </html>
