--- a/Index.html
+++ b/Index.html
@@ -59,6 +59,7 @@
           pagina6Button.addEventListener("click", function () {
             content.textContent = "Visuele en multimedia-inhoud zijn verschillende vormen van media die visuele elementen, zoals foto's, video's, animaties en geluid combineren om informatie over te brengen. Deze content wordt gebruikt voor verschillende dingen zoals online marketing, entertainment, onderwijs en communicatie. Het doel is vaa om informatie anntrekkelijker en begrijpelijker te maken door het niet te schrijven maar het te laten zien. Visuele en multimedia-inhoud wordt vaak gebruikt op websites, sociale media, in reclamecampagnes, informatie video's, videogames en veel meer. Het vergroot de betrokkenheid van het publiek en verbetert de overdracht van de boodschappen door een combinatie van tekst, beeld en geluid.";
               });
+        <img src="download (1).png" alt="Binair stelsel">
     </script>
     <footer>
         <p>&copy; Gijs van der hoorn, 2023</p>
