--- a/kleurenmodellen.html
+++ b/kleurenmodellen.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<html> <!--dit is het html element-->
+<head>
+    <title>Het eerste begin</title>
+    <link rel="stylesheet" type="text/css" href="Opmaak.css">
+    <meta charset="utf-8">
+</head>
+<body>
+    Uitleg overkleurmodellen
 
+    <br>
+    <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="binairstelsel.html">binairstelsel</a></li>
+        <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+        <li><a href="Compressietechnieken.html">Compressietechnieken</a></li>
+        <li><a href="CPU.html">werking van computers</a></li>
+        <li><a href="algemene informatie.html">algemene informatie</a></li>
+    </ul>
+
+    <img src="kleurmoddelen.png" alt="Deze site is nog niet af" width="520" height="333">
+
+    <p>
+
+        kleurenmodellen 
+    </p>
+
+</p>
+
+<iframe width="853" height="480" src="https://www.youtube.com/embed/cKaRxd6tdHY" title="Color Models | RGB, HSL, HSV and CMYK" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+</p>
+
+</body>
+</html>
