--- a/kleurenmodellen.html
+++ b/kleurenmodellen.html
@@ -22,7 +22,7 @@
 
     <p>
 
-        kleurenmodellen 
+        Kleuren Modellen zijn systemen die worden gebruikt om kleuren te laten zien in digitale en grafische toepassingen. Ze vormen een belangrijk onderdeel: beeldbewerking, grafisch ontwerp en digitale weergave. Voorbeelden van kleuren modellen zijn RGB, waarin kleuren worden gemaakt door verschillende kleuren van deze drie primaire kleuren te mengen, en CMYK, dat wordt gebruikt voor kleurenafdrukken. Andere modellen zoals HSB en Lab, bieden verschillende manieren om kleuren te laten zien. De keuze van het kleurenmodel hangt af van de toepassingen en het doel, zoals schermweergave, afdrukken of kleurcorrectie.
     </p>
 
 </p>
