--- a/computer.html
+++ b/computer.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 </head>
 <body>
-    Uitleg ………
+    Uitleg computer
 
     <br>
     <ul>
@@ -17,4 +17,13 @@
         <li><a href="CPU.html">werking van computers</a></li>
         <li><a href="algemene informatie.html">algemene informatie</a></li>
     </ul>
+
+        <p>
+
+……….
+</p>
+
+</body>
+</html>
+
 
