--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -20,7 +20,7 @@
 
     <p>
 
-……….
+Compressietechnieken zijn methodes om digitale gegevens op te slaan. Dit zorgt ervoor dat de bestandsgroottes kleiner worden en het versnelt gegevensoverdracht. Losslesscompressie behoudt alle oorspronkelijke gegevens en is nuttig voor tekst, archieven en afbelldingen waar precisie belangrijk is. Lossy compressie vermindert gegvens door onndige details te verwijderen, geschikt voor multimedia zoals foto's, video's en audio met enige kwliteitsverlies. Populaire compressieformaten bevatten JPEG, PNG, MP3 en ZIP. Deze technieken zijn cruciaal voor efficiënt datamanagment en ruimtebesparing in digitale communicatie en opslag
 </p>
 
 </body>
