--- a/3 lagenmodel.html
+++ b/3 lagenmodel.html
@@ -20,7 +20,7 @@
 
     <p>
 
-het 3 lagenmodel is
+het 3 lagenmodel bestaat uit 3 lagen wat de naam ook zegt. Het 3 lagenmodel bestaat uit de fysieke laag de logische laag en de toepassingenlaag. Dit leg ik uit in de volgende knoppen.
 </p>
 
 </body>
