--- a/dropdown.html
+++ b/dropdown.html
@@ -1,30 +1,61 @@
-<!DOCTYPE html>
-<html>
-  <head> 
-  <title>Mijn pagina</title>
-    </head>
-  <body>
-    <ul class="top-level-menu">
-    <li><a href="dropdown.html">About</a></li>
-    <li><a href="dropdown.html">Services</a></li>
-    <li>
-        <a href="dropdown.html">Offices</a>
-        <ul class="second-level-menu">
-            <li><a href="dropdown.html">Chicago</a></li>
-            <li><a href="dropdown.html">Los Angeles</a></li>
-            <li>
-                <a href="dropdown.html">New York</a>
-                <ul class="third-level-menu">
-                    <li><a href="dropdown.html">Information</a></li>
-                    <li><a href="dropdown.html">Book a Meeting</a></li>
-                    <li><a href="dropdown.html">Testimonials</a></li>
-                    <li><a href="dropdown.html">Jobs</a></li>
-                </ul>
-            </li>
-            <li><a href="dropdown.html">Seattle</a></li>
-        </ul>
-    </li>
-    <li><a href="dropdown.html">Contact</a></li>
-</ul>
-  </body>
-</html>
+<div class="dropdown"> 
+        <button class="dropbtn">Dropdown ^
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content"> 
+          <a href="Fysiekelaag.html">Fysiekelaag</a>
+          <a href="computer.html">Algemene informatie</a>
+          <a href="binairstelsel.html">Binaire stelsel</a>
+          <a href="kleurenmodellen.html">Kleurmodellen</a>
+          <a href="compressietechnieken.html">Compressie</a>
+        </div>
+  </ul>
+
+CSS
+
+/*dropdown menu*/
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn { 
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: rgb(89, 205, 237);
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn { 
+  background-color: rgb(0, 0, 40);
+}
+
+.dropdown-content { 
+  display: none;
+  position: absolute;
+  background-color: rgb(0, 0, 0);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1; 
+}
+
+.dropdown-content a { 
+  float: none;
+  color: rgb(255, 255, 255);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover { 
+  background-color: rgb(0, 0, 40);
+}
+
+.dropdown:hover .dropdown-content { 
+  display: block
+}
