--- a/dropdown.html
+++ b/dropdown.html
@@ -1,61 +1,33 @@
-<div class="dropdown"> 
-        <button class="dropbtn">Dropdown ^
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content"> 
-          <a href="Fysiekelaag.html">Fysiekelaag</a>
-          <a href="computer.html">Algemene informatie</a>
-          <a href="binairstelsel.html">Binaire stelsel</a>
-          <a href="kleurenmodellen.html">Kleurmodellen</a>
-          <a href="compressietechnieken.html">Compressie</a>
-        </div>
-  </ul>
+<!DOCTYPE html>
+<html>
+    <head>
+        <titel>Dropdown menu</titel>
+        <link rel=""stylesheet" href="opmaak.css2"
+    </head>
+    <style>
+        body {
+            background-color:rgb(248, 245, 236)
+            
+        }
+    </style>
+    <body>
+        <ul class="top-level-menu">
+            <li><a href="index.html">homepage</a></li>
+            <li>
+                <a href="#">3 lagen menu</a>
+                <ul class="second-level-menu">
+                    <li><a href="algemene-informatie-computer.html">algemene informatie</a></li>
+                    <li><a href="toepassingen laag">toepassingen laag</a></li>
+                    <li><a href="logische laag">logische laag</a></li>
+                    <li>
+                        <a href="fysieke laag">fysieke laag</a>
+                        <ul class="third-level-menu">
+                            <li><a href="geheugen.html">geheugen</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
 
-CSS
-
-/*dropdown menu*/
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn { 
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: rgb(89, 205, 237);
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn { 
-  background-color: rgb(0, 0, 40);
-}
-
-.dropdown-content { 
-  display: none;
-  position: absolute;
-  background-color: rgb(0, 0, 0);
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1; 
-}
-
-.dropdown-content a { 
-  float: none;
-  color: rgb(255, 255, 255);
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover { 
-  background-color: rgb(0, 0, 40);
-}
-
-.dropdown:hover .dropdown-content { 
-  display: block
-}
+    </body>
+</html>
